# esp-trace-decoder

./: Cargo.toml  LICENSE-APACHE  README.md
example-esp32c6/: Cargo.toml
example-esp32c6/.github/workflows/: rust_ci.yml
example-esp32c6/src/: main.rs
example-esp32h2/: Cargo.toml
example-esp32h2/.cargo/: config.toml
src/: inst_decoder.rs  lib.rs  main.rs  trace_decoder.rs
