[package]
name = "example-esp32c6"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { git = "https://github.com/esp-rs/esp-hal/", rev = "663cbd9ce08c2cf03662f3ed294a7a4b9e7ae5d6", package = "esp32c6-hal", version = "0.5.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32c6"] }
